# augmenty

./: .buildinfo  .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  adding_an_augmenter.html  augmenters.html  augmenters_overview.html  augmenty.augment_utilities.html  augmenty.character.html  augmenty.doc.html  augmenty.keyboard.html  augmenty.lang.html  augmenty.span.html  augmenty.token.html  augmenty.util.html  citation.cff  faq.html  genindex.html  index.html  installation.html  introduction.html  makefile  news.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  todolist.md
.doctrees/: adding_an_augmenter.doctree  augmenters.doctree  augmenters_overview.doctree  augmenty.augment_utilities.doctree  augmenty.character.doctree  augmenty.doc.doctree  augmenty.keyboard.doctree  augmenty.lang.doctree  augmenty.span.doctree  augmenty.token.doctree  augmenty.util.doctree  environment.pickle  faq.doctree  index.doctree  installation.doctree  introduction.doctree  news.doctree  requirements.doctree
.doctrees/nbsphinx/tutorials/: introduction.ipynb
.doctrees/tutorials/: introduction.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bugs.md  04_augmenter-request.md  config.yml
.github/workflows/: black_formatter.yml  dependabot_automerge.yml  documentation.yml  lint.yml  pre-commit.yml  publish_to_pypi.yml  pytest-cov-comment.yml  readme.md  release.yml  stalebot.yml  static_type_checks.yml  tests.yml  tutorials.yml
_modules/: index.html
_modules/augmenty/: augment_utilities.html  keyboard.html  util.html
_modules/augmenty/character/: casing.html  replace.html  spacing.html  swap.html
_modules/augmenty/doc/: casing.html  subset.html
_modules/augmenty/lang/da/: augmenters.html
_modules/augmenty/span/: entities.html
_modules/augmenty/token/: casing.html  replace.html  spacing.html  swap.html
_sources/: adding_an_augmenter.rst.txt  augmenters_overview.md.txt  augmenters_overview.rst.txt  augmenty.lang.rst.txt  augmenty.span.rst.txt  augmenty.util.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  news.rst.txt  requirements.txt
_sources/tutorials/: introduction.ipynb.txt
_sources/tutorials/training_using_augmenty/: training_using_augmenty.ipynb.txt
_static/: documentation_options.js  pygments.css
augmenty/: __init__.py  about.py  augment_utilites.py  augment_utilities.py  keyboard.py  meta.json  references.json  util.py
augmenty/character/: __init__.py  casing.py  replace.py  spacing.py  swap.py
augmenty/doc/: __init__.py  casing.py  subset.py
augmenty/lang/: __init__.py
augmenty/lang/da/: __init__.py  augmenters.py  keyboard.py
augmenty/lang/de/: __init__.py  keyboard.py
augmenty/lang/el/: __init__.py  keyboard.py
augmenty/lang/en/: __init__.py  keyboard.py
augmenty/lang/es/: __init__.py  keyboard.py
augmenty/lang/fr/: __init__.py
augmenty/lang/hu/: __init__.py
augmenty/lang/it/: __init__.py  keyboard.py
augmenty/lang/lt/: __init__.py  keyboard.py
augmenty/lang/mk/: __init__.py
augmenty/lang/nb/: __init__.py
augmenty/lang/nl/: __init__.py
augmenty/lang/pl/: __init__.py  keyboard.py
augmenty/lang/pt/: __init__.py  keyboard.py
augmenty/lang/ro/: __init__.py
augmenty/lang/ru/: __init__.py  keyboard.py
augmenty/span/: __init__.py  entities.py
augmenty/spans/: entities.py  person.py
augmenty/tests/: books.py  fixtures.py  test_all.py  test_all_augmenters.py  test_augmentation_utilities.py  test_character.py  test_doc.py  test_general.py  test_keyboard.py  test_spans.py  test_static_embedding.py  test_token.py  test_util.py  utils.py
augmenty/tests/augmenters/: test_character.py  test_danish.py  test_keyboard.py
augmenty/tests/lang/: test_da.py
augmenty/tests/old/: test_person.py
augmenty/token/: __init__.py  casing.py  insert.py  replace.py  spacing.py  static_embedding_util.py  swap.py  wordnet_util.py
demo/: requirements.txt  streamlit.py
dev/: all_augmenters.py  augmenters.md  keyboard_str_to_kb.py  streamlit.py  todolist.md
dev/pytest-coverage/: .coveragerc  run_coverage.py
docs/: adding_an_augmenter.rst  augmenters.md  augmenters_overview.md  augmenty.augment_utilities.rst  augmenty.character.rst  augmenty.doc.rst  augmenty.keyboard.rst  augmenty.lang.rst  augmenty.span.rst  augmenty.token.rst  conf.py  create_augmenters_table.py  faq.rst  index.rst  installation.rst  introduction.rst  news.rst
docs/tutorials/: introduction.ipynb  requirements.txt
docs/tutorials/.ipynb_checkpoints/: introduction-checkpoint.ipynb
docs/tutorials/training_using_augmenty/: README.md  augmenters.py  project.yml  training_using_augmenty.ipynb
docs/tutorials/training_using_augmenty/configs/: default.cfg
paper/: paper.bib  paper.md  paper.qmd  readme.md
src/augmenty/: about.py  augment_utilities.py  keyboard.py  meta.json  util.py
src/augmenty/character/: __init__.py  casing.py  replace.py  spacing.py  swap.py
src/augmenty/doc/: casing.py  subset.py
src/augmenty/lang/: __init__.py
src/augmenty/lang/da/: __init__.py  augmenters.py  keyboard.py
src/augmenty/lang/de/: keyboard.py
src/augmenty/lang/el/: __init__.py  keyboard.py
src/augmenty/lang/en/: __init__.py  keyboard.py
src/augmenty/lang/es/: __init__.py  keyboard.py
src/augmenty/lang/fr/: __init__.py  (+1 more)
src/augmenty/span/: __init__.py  entities.py  utils.py
src/augmenty/token/: casing.py  insert.py  replace.py  spacing.py  static_embedding_util.py  swap.py  wordnet_util.py
tests/: books.py  conftest.py  fixtures.py  requirements.txt  test_all_augmenters.py  test_augmentation_utilities.py  test_character.py  test_doc.py  test_general.py  test_issue_170.py  test_keyboard.py  test_spans.py  test_static_embedding.py  test_token.py  test_util.py
tests/lang/: test_da.py
tutorials/: introduction.html  introduction.ipynb  introduction.py
tutorials/training_using_augmenty/: README.html  training_using_augmenty.html
(+13 files in other folders)
