[metadata]
name = augmenty
version = attr: augmenty.about.__version__
description = An augmentation library based on SpaCy for joint augmentation of text and labels.
author = Kenneth Enevoldsen
author_email = kennethcenevoldsen@gmail.com
url = https://github.com/KennethEnevoldsen/augmenty 
license = MIT
license_files = LICENSE
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    nlp 
    danish
[options]
packages = find:
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires =
    spacy>=3.2.0,<3.3.0

setup_requires =
    setuptools

[options.extras_require]
da = 
    dacy>=1.1.0
all = 
    nltk>=3.6.7,<3.8.0

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E731, W503
max-line-length = 88
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy, thinc.mypy

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/_vendorized/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True

